# arbeider

./: .gitattributes  .gitignore  .pylintrc  Cargo.toml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/scripts/: release.py
benches/: cal.rs  funds.rs  read.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
deprecate/: lib.rs
deprecate/indicator/: define.rs  mod.rs
deprecate/mock/: market.rs  price.rs  stock.rs
doc/: dev.md
examples/: cal.rs  clean.rs  data.ipynb  mock.rs  mock_one.rs
python/: Cargo.toml  README.md  build.rs  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  versioneer.py
python/arbeider/: __init__.py  _version.py  remote.py
python/src/: client.rs  lib.rs
python/tests/: test_remote.py
scheduler/: Cargo.toml
scheduler/src/: lib.rs  main.rs  signal.rs
signal/: Cargo.toml
signal/src/: lib.rs  protocol.rs
src/: builder.rs  lib.rs  stage.rs  task.rs  worker.rs
src/arbeider/: __init__.py  _version.py
src/cal/: calculator.rs  mod.rs
src/client/: mod.rs
src/indicator/: datatype.rs  define.rs  mod.rs  returns.rs
src/mock/: market.rs  mod.rs  price.rs  stock.rs
src/scheduler/: mod.rs  server.rs  signal.rs  task.rs
src/task/: back.rs  job.rs  mod.rs
src/transmit/: mod.rs
src/worker/: builder.rs  dropper.rs  executor.rs  func.rs  mod.rs
task/: Cargo.toml
task/src/: back.rs  define.rs  job.rs  lib.rs
worker/: Cargo.toml
worker/src/: cli.rs  executor.rs  lib.rs  main.rs
