[package]
name = "arb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://lipicoder.github.io/arbeider"
documentation = "https://lipicoder.github.io/arbeider"
repository = "https://github.com/lipicoder/arbeider"
readme = "README.md"
description = "Arbeider command line tool"

[dependencies]
clap = {version = "4.0.26", features = ["derive", "cargo"]}

