[package]
name = "signal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://lipicoder.github.io/arbeider"
documentation = "https://lipicoder.github.io/arbeider"
repository = "https://github.com/lipicoder/arbeider"
readme = "README.md"
description = "Arbeider transport protocol"


[dependencies]
uuid = {version="1.2.2", features=["serde", "v4"]}
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"
serde_bytes = "0.11.9"
task = {path="../task", version="0.1.0"}

[build-dependencies]

